# gpt-partition-type

./: Cargo.toml  LICENSE  README.md  build.rs
src/: GUID_table.tsv  lib.rs
